src/objects/Internal_Action__c.object
<CustomObject>
    <description>Used for IDFS Distribution - Operations team to manage and report on internal actions for ACRs for DPCs.</description>
    <fields>
        <fullName>Action_Person_text__c</fullName>
        <label>Action Person</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_ACR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related ACR</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Internal Actions</relationshipLabel>
        <relationshipName>Internal_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Action</label>
    <nameField>
        <displayFormat>Action-{0000}</displayFormat>
        <label>Internal Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>